# Handmade-Chat

./: CMakeLists.txt  README.md
[1] Chat_App (SERVER)/Chat_App/: ChatServer.cpp  ChatServer.h
[2] Chat_App (CLIENT)/Chat_App/: ChatClient.h
src/Client/: ChatClient.cpp  ChatClient.h  Main.cpp  TCPClient.cpp  TCPClient.h  TCPSocket.h
src/Server/: ChatServer.cpp  ChatServer.h  Main.cpp  TCPServer.cpp  TCPServer.h  TCPSocket.cpp  TCPSocket.h
